# Cascoin

./: .gitignore  .travis.yml  BUILD_SYSTEM_SUMMARY.md  BUILD_WINDOWS_README.md  BUILD_WINDOWS_SUMMARY.md  CMakeLists.txt  CONTRIBUTING.md  COPYING  IMPLEMENTATION_GUIDE.md  INSTALL.md  MEMORY_LEAK_FIXES.md  Makefile.am  README.md  SOLUTION_SUMMARY.md  WINDOWS_BUILD_INSTRUCTIONS.md  WINDOWS_BUILD_NATIVE.md  WINDOWS_QT_PLATFORM_PLUGIN_FIX.md  build-qt5-windows.sh  build-qt6-windows.sh  build-windows-deps.sh  build-windows-final.sh  build-windows-msys2.sh  build-windows-vcpkg.bat  cascoin-gui-optimization.conf  clean-and-build.sh  conanfile.txt  configure.ac  configure~  debug_gui.sh  link.txt  test_gui_responsiveness.py  vcpkg.json
.github/: ISSUE_TEMPLATE.md
.github/workflows/: build-linux-distribution.yml  build.yml
build-aux/m4/: bitcoin_qt.m4
contrib/: README.md  bitcoin-qt.pro  build-macos-qt6.sh  gitian-build.sh  tidy_datadir.sh
contrib/ci/: build-distribution-local.sh  build-linux.sh  build-win.sh  test-library-versions.sh
contrib/devtools/: gen-manpages.sh
contrib/gitian-descriptors/: gitian-linux-distribution.yml  gitian-linux.yml  gitian-osx-signer.yml  gitian-osx.yml  gitian-win-signer.yml  gitian-win.yml
contrib/linearize/: README.md  example-linearize.cfg
contrib/macdeploy/: README.md  custom_dsstore.py  detached-sig-create.sh  fancy.plist  macdeployqtplus
contrib/qos/: README.md  tc.sh
contrib/seeds/: README.md  generate-seeds.py  makeseeds.py  nodes_main.txt
contrib/testgen/: README.md
contrib/windeploy/: win-codesign.cert
depends/: Makefile  README.md  build-windows.sh  description.md  extract_helper.py  funcs.mk  test-build-system.sh
depends/builders/: default.mk  linux.mk
depends/hosts/: default.mk  mingw32.mk
depends/patches/bdb/: winioctl-and-atomic_init_db.patch
depends/patches/qt/: fix_qt_pkgconfig.patch  mac-qmake.conf
doc/: README.md  README_osx.md  README_windows.txt  REST-interface.md  assets-attribution.md  benchmarking.md  build-cache-optimization.md  build-linux.md  build-netbsd.md  build-openbsd.md  build-osx.md  build-unix.md  build-windows.md  dependencies.md  developer-notes.md  dnsseed-policy.md  exact-library-requirements.md  files.md  fuzzing.md  qt6-plugins-optimization.md  reduce-traffic.md  release-notes-litecoincash.md  release-process.md  tor.md  travis-ci.md  zmq.md
doc/litecoincash-release-notes/: release-notes-0.10.2.2.md  release-notes-0.10.4.md  release-notes-0.13.2.md  release-notes-0.13.3.md  release-notes-0.14.2.md  release-notes-0.15.0.1.md  release-notes-0.15.1.md
doc/man/: Makefile.am  cascoin-cli.1  cascoin-qt.1  cascoin-tx.1  cascoind.1
doc/release-notes/: release-notes-3.0.0.md  release-notes-3.1.0.md  release-notes-3.1.1.md  release-notes-3.1.2.md  release-notes-3.1.3.md  release-notes-3.1.4.md  release-notes-3.1.5.md
share/: setup.nsi.in
share/qt/: Info.plist.in
share/rpcauth/: rpcauth.py
src/: Makefile.am  Makefile.bench.include  Makefile.qt.include  Makefile.qttest.include  Makefile.test.include  amount.h  arith_uint256.cpp  beenft.cpp  beenft.h  bitcoin-cli-res.rc  bitcoin-cli.cpp  bitcoin-tx-res.rc  bitcoin-tx.cpp  bitcoind-res.rc  bitcoind.cpp  chain.cpp  chain.h  chainparams.cpp  chainparamsseeds.h  clientversion.cpp  core_write.cpp  httpserver.cpp  init.cpp  miner.cpp  miner.h  net.cpp  net.h  net_processing.cpp  net_processing.h  netaddress.cpp  pow.cpp  pow.h  protocol.cpp  protocol.h  rialto.cpp  rialto.h  scheduler.cpp  sync.h  timedata.h  torcontrol.cpp  (+11 more)
src/bench/: .gitignore  checkblock.cpp
src/consensus/: params.h  tx_verify.cpp
src/crypto/: common.h
src/crypto/minotaurx/: minotaur.h
src/leveldb/: build_detect_platform
src/policy/: feerate.cpp  policy.cpp  policy.h
src/primitives/: block.cpp  block.h  transaction.cpp  transaction.h
src/qt/: adaptivepoller.cpp  adaptivepoller.h  addressbookpage.cpp  addresstablemodel.cpp  addresstablemodel.h  askpassphrasedialog.cpp  askpassphrasedialog.h  bantablemodel.cpp  bctdatabase.cpp  bctdatabase.h  beenftpage.cpp  beenftpage.h  beenfttablemodel.cpp  beenfttablemodel.h  bitcoin.cpp  bitcoin.qrc  bitcoinamountfield.cpp  bitcoingui.cpp  bitcoingui.h  bitcoinunits.cpp  clientmodel.cpp  coincontroldialog.cpp  cpumanager.cpp  cpumanager.h  cpusettingsdialog.cpp  cpusettingsdialog.h  editaddressdialog.cpp  guiconstants.h  guiutil.cpp  guiutil.h  hivedialog.cpp  hivedialog.h  hivetablemodel.cpp  hivetablemodel.h  intro.cpp  macdockiconhandler.mm  macnotificationhandler.mm  memoryoptimizer.cpp  memoryoptimizer.h  modaloverlay.cpp  (+45 more)
src/qt/forms/: askpassphrasedialog.ui  coincontroldialog.ui  debugwindow.ui  hivedialog.ui  modaloverlay.ui  optionsdialog.ui  overviewpage.ui  receivecoinsdialog.ui  receiverequestdialog.ui  sendcoinsdialog.ui  sendcoinsentry.ui  signverifymessagedialog.ui
src/qt/locale/: bitcoin_af.ts  bitcoin_af_ZA.ts  bitcoin_am.ts  bitcoin_ar.ts  (+101 more)
src/rpc/: blockchain.cpp  blockchain.h  client.cpp  mining.cpp  misc.cpp  net.cpp  protocol.h  rawtransaction.cpp  server.cpp
src/script/: interpreter.cpp  interpreter.h  script.cpp  script.h  script_error.cpp  script_error.h  sigcache.h  sign.cpp  sign.h
src/secp256k1/: Makefile.am
src/support/: lockedpool.cpp
src/test/: README.md  addrman_tests.cpp  amount_tests.cpp  compress_tests.cpp  cuckoocache_tests.cpp  getarg_tests.cpp  main_tests.cpp  multisig_tests.cpp  net_tests.cpp  netbase_tests.cpp  rpc_tests.cpp  script_P2SH_tests.cpp  script_tests.cpp  test_bitcoin.cpp  test_bitcoin_main.cpp  transaction_tests.cpp  txvalidationcache_tests.cpp  util_tests.cpp
src/univalue/: Makefile.am  configure.ac  configure~
src/wallet/: db.cpp  rpcdump.cpp  rpcwallet.cpp  rpcwallet.h  wallet.cpp  wallet.h  walletdb.cpp
test/: README.md
test/functional/: README.md  feature_block.py  feature_config_args.py  interface_bitcoin_cli.py  interface_zmq.py  mempool_persist.py  p2p_segwit.py  p2p_unrequested_blocks.py  rpc_fundrawtransaction.py  rpc_listtransactions.py  rpc_rawtransaction.py  rpc_users.py  test_runner.py  wallet_bumpfee.py  wallet_scriptaddress2.py
(+19 files in other folders)
